# libpq

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  conn.config  test.c  testlibpq.c  testlibpq2.c  testlibpq3.c
include/postgresql/server/: pg_config.h
lib/: libecpg.so.6.13  libecpg_compat.so.3.13  libpgtypes.so.3.13  libpq.so.5.13
lib/pkgconfig/: libecpg.pc  libecpg_compat.pc  libpgtypes.pc  libpq.pc
lib/postgresql/pgxs/src/: Makefile.global
libpq/: CMakeLists.txt  Makefile  fe-lobj.c  pg_config.h  pg_config_linux_x86.h
